--- a/html/index.html
+++ b/html/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
+<script lang="ts">
+</script>
+
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My_config_file_is_work!</title>
-</head>
-<body>
-    <h1>Transcendance yeeeees!</h1>
-</body>
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="stylesheet" href="/global.css">
+		<meta name="viewport" content="width=device-width" />
+		%sveltekit.head%
+	</head>
+	<body data-sveltekit-preload-data="hover">
+		<div style="display: contents">%sveltekit.body%</div>
+	</body>
 </html>
+
